<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SplitBillsActivity">

    <ImageView
        android:id="@+id/share_screen"
        android:layout_width="41dp"
        android:layout_height="9dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/dots1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/decoration"
        android:layout_width="28dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/dots2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ArialBold"
        android:text="@string/total"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitSeekBar" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ArialBold"
        android:text="@string/tip"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/total2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ArialBold"
        android:text="@string/bill_amount"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decoration" />

    <TextView
        android:id="@+id/split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/split"
        android:fontFamily="@font/ArialBold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <SeekBar
        android:id="@+id/splitSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/dark"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <SeekBar
        android:id="@+id/splitSeekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/dark"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split" />

    <TextView
        android:id="@+id/totalPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ArialBold"
        android:text="@string/totalPP"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitSeekBar2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/bill_amount_text"
        android:textColor="@color/white"
        android:textSize="@dimen/bill_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/total_text"
        android:textColor="@color/white"
        android:textSize="@dimen/bill_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-thin"
        android:shadowColor="@color/dark"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/dollar"
        android:textColor="@color/white"
        android:textSize="@dimen/bill_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPP" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="298dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/lettermagic"
        android:shadowColor="@color/dark"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/total_pp_num"
        android:textColor="@color/white"
        android:textSize="@dimen/total_per_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/totalPP" />
</androidx.constraintlayout.widget.ConstraintLayout>